# thesis-data-pipeline

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/cli/: mod.rs
src/feature_extraction/: feature_vector.rs  mod.rs  payload.rs  sliding.rs  state.rs
src/parse_dns/: mod.rs
src/parse_log/: hex.rs  mod.rs
src/shared_interface/: mod.rs
