[package]
name = "thesis-data-pipeline"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "~1"
clap = { version = "~2", features = ["yaml"] }
counter = "~0.5"
csv = "~1"
erased-serde = "~0.3"
fast-float = "~0.2"
linereader = "~0.4"
psl = "~2"
rayon = "~1"
rmp-serde = "~0.15"
serde = { version = "~1", features = ["derive"] }
serde_prefix = "~0.1"

[[bin]]
name = "preprocess"
path = "src/bin/preprocessing/bin.rs"

[[bin]]
name = "extract"
path = "src/bin/feature_extraction/bin.rs"
